--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "test:staged": "jest"
+    "test:staged": "jest --passWithNoTests",
+    "lint": "eslint ./src --ext .ts"
   },
   "keywords": [],
   "author": "",
