chore: change command to run lint in lintstagedrc to 'npm run lint'

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest",
     "test:staged": "jest --passWithNoTests",
-    "lint": "eslint ./src --ext .ts"
+    "lint": "eslint src/** --fix"
   },
   "keywords": [],
   "author": "",
