--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -137,6 +137,7 @@
     "@typescript-eslint/no-non-null-assertion": 0,
     "class-methods-use-this": 0,
     "import/prefer-default-export": 0,
-    "no-restricted-syntax": 0
+    "no-restricted-syntax": 0,
+    "@typescript-eslint/no-explicit-any": 0
   }
 }
