--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -138,6 +138,7 @@
     "class-methods-use-this": 0,
     "import/prefer-default-export": 0,
     "no-restricted-syntax": 0,
-    "@typescript-eslint/no-explicit-any": 0
+    "@typescript-eslint/no-explicit-any": 0,
+    "no-promise-executor-return": 0
   }
 }
