--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "sucrase-node ./src/main/server.ts",
+    "debug": "nodemon ./src/main/server.ts",
     "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
     "test:verbose": "jest --passWithNoTests",
     "test:unit": "npm test -- --watch -c jest-unit-config.ts",
@@ -18,6 +20,7 @@
   "devDependencies": {
     "@shelf/jest-mongodb": "^2.2.1",
     "@types/bcrypt": "^5.0.0",
+    "@types/express": "^4.17.13",
     "@types/jest": "^27.4.1",
     "@types/mongodb": "^4.0.7",
     "@types/node": "^17.0.23",
@@ -42,7 +45,9 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.0",
+    "express": "^4.17.3",
     "mongodb": "^4.5.0",
+    "sucrase": "^3.21.0",
     "validator": "^13.7.0"
   }
 }
