--- a/package.json
+++ b/package.json
@@ -43,11 +43,13 @@
     "typescript": "^4.6.3"
   },
   "dependencies": {
+    "@types/supertest": "^2.0.12",
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "mongodb": "^4.5.0",
     "sucrase": "^3.21.0",
+    "supertest": "^6.2.2",
     "validator": "^13.7.0"
   }
 }
