--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "fast-glob": "^3.2.11",
     "mongodb": "^4.5.0",
     "sucrase": "^3.21.0",
     "supertest": "^6.2.2",
