--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.1",
-    "@types/mongodb": "^4.0.7",
+    "@types/mongodb": "3.5.1",
     "@types/node": "^17.0.23",
+    "@types/supertest": "^2.0.12",
     "@types/validator": "^13.7.2",
     "@typescript-eslint/eslint-plugin": "5.3.1",
     "@typescript-eslint/parser": "5.3.1",
@@ -43,12 +44,11 @@
     "typescript": "^4.6.3"
   },
   "dependencies": {
-    "@types/supertest": "^2.0.12",
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "fast-glob": "^3.2.11",
-    "mongodb": "^4.5.0",
+    "mongodb": "3.5.1",
     "sucrase": "^3.21.0",
     "supertest": "^6.2.2",
     "validator": "^13.7.0"
